fixes menu icon spacing

--- a/src/opnsense/www/themes/opnsense-dark/assets/stylesheets/main.scss
+++ b/src/opnsense/www/themes/opnsense-dark/assets/stylesheets/main.scss
@@ -560,8 +560,11 @@ table{
     margin-right: 15px;
 }
 
-.__iconspacer{
+.__iconspacer {
     padding-right: 10px;
+    width: 20px;
+    display: inline-block;
+    text-align: center;
 }
 
 hr {
