--- a/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
+++ b/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
@@ -568,8 +568,11 @@ table{
     margin-right: 15px;
 }
 
-.__iconspacer{
+.__iconspacer {
     padding-right: 10px;
+    width: 20px;
+    display: inline-block;
+    text-align: center;
 }
 
 hr {
